--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -15,14 +15,14 @@
         <th mat-header-cell *matHeaderCellDef>Rol</th>
         <td mat-cell *matCellDef="let user">{{ user.role.name }}</td>
       </ng-container>
-      <ng-container matColumnDef="acciones">
-        <th mat-header-cell *matHeaderCellDef>acciones</th>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let user">
           <button mat-icon-button (click)="openEditDialog(user)">
             <mat-icon>edit</mat-icon>
           </button>
         </td>
-      </ng-container> 
+      </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
