--- a/src/app/admin/users-views/users/users.component.html
+++ b/src/app/admin/users-views/users/users.component.html
@@ -20,6 +20,19 @@
     <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let user">{{ user.email }}</td>
   </ng-container>
+  <!-- usa  select para dar activo inactivo por favor y llamar al user.state -->
+  <ng-container matColumnDef="state">
+    <th mat-header-cell *matHeaderCellDef>estado</th>
+    <td mat-cell *matCellDef="let user">
+      <mat-select [(ngModel)]="user.state"
+      (ngModelChange)="changeState(user)"
+      >
+        <mat-option [value]="true">Activo</mat-option>
+        <mat-option [value]="false">Inactivo</mat-option>
+      </mat-select>
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="rol">
       <th mat-header-cell *matHeaderCellDef>Rol</th>
       <td mat-cell *matCellDef="let user">{{ user.role.name }}</td>
