--- a/src/app/admin/users-views/users/users.component.html
+++ b/src/app/admin/users-views/users/users.component.html
@@ -35,7 +35,7 @@
 
   <ng-container matColumnDef="rol">
       <th mat-header-cell *matHeaderCellDef>Rol</th>
-      <td mat-cell *matCellDef="let user">{{ user.role.name }}</td>
+      <td mat-cell *matCellDef="let user"> {{ user.role ? user.role.name : 'Sin rol asignado' }}</td>
     </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
